# solana-client-template

./: Cargo.toml
src/: main.rs
