[package]
name = "solana-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.24.2"
anyhow = "1.0.32"
regex = "1.4.5"
thiserror = "1.0.20"
url = "2.2.2"
shellexpand = "2.1.0"
rand = "0.7.3"
solana-sdk = "~1.9.13"
solana-account-decoder = "~1.9.13"
borsh = "0.9.1"
anchor-syn = {version = "0.24.2", features = ["hash"] }